membuat website Coffee Shop

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,8 +6,13 @@
     "amet",
     "Beli",
     "consectetur",
+    "Craeted",
+    "Eaque",
     "elit",
     "exercitationem",
+    "fuga",
+    "iste",
+    "iusto",
     "Jumpstart",
     "Kenapa",
     "ketika",
@@ -17,10 +22,21 @@
     "Kopi",
     "maxime",
     "memilih",
+    "natus",
     "Nikmati",
+    "Nobis",
+    "odit",
+    "Officiis",
+    "pariatur",
+    "perspiciatis",
     "pesan",
+    "quidem",
+    "quisquam",
     "Secangkir",
     "Sekarang",
-    "Tentang"
+    "sunt",
+    "temporibus",
+    "Tentang",
+    "Unde"
   ]
 }
